--- a/src/partials/structure/header/primary-nav.hbs
+++ b/src/partials/structure/header/primary-nav.hbs
@@ -3,7 +3,7 @@
 <section id="primaryNav">
      <div class="container-xl d-flex justify-content-center">
           <a href="/" class="text-decoration-none py-4 pe-md-5 me-md-5">
-               <img class="mw-100" src="./assets/images/QD-Logo-Homepage-1.svg" alt="Quilting Daily" />
+               <img class="mw-100" src="{{webRoot}}/images/QD-Logo-Homepage-1.svg" alt="Quilting Daily" />
           </a>
           <nav class="navbar navbar-expand-lg py-4 ps-md-5 ms-5 flex-grow-1 justify-content-end">
                <a class="navbar-toggler border-0" data-bs-toggle="collapse" data-bs-target="#navbarNavCollapse" aria-controls="navbarNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
