--- a/src/partials/structure/open.hbs
+++ b/src/partials/structure/open.hbs
@@ -6,7 +6,7 @@
      <!-- Favicon -->
      <link rel="icon" href="{{webRoot}}/favicon.ico">
      <!-- Main JS -->
-     <script type="module" src="./js/main.js"></script>
+     <script type="module" src="{{webRoot}}/js/main.js"></script>
      <!-- Font Awesome -->
      <script src="https://kit.fontawesome.com/e30d92bf89.js" crossorigin="anonymous"></script>
 </head>
