--- a/src/partials/structure/breadcrumb.hbs
+++ b/src/partials/structure/breadcrumb.hbs
@@ -6,7 +6,7 @@
                <nav class="col-lg-8" style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                     <ol class="breadcrumb d-flex align-items-center justify-content-center justify-content-lg-start fw-normal">
                          <li class="breadcrumb-item">
-                              <a href="#" class="text-decoration-none link-primary opacity-50">Home</a>
+                              <a href="index.html" class="text-decoration-none link-primary opacity-50">Home</a>
                               <i class="fa-light fa-caret-right text-primary text-opacity-50 fa-caret-right"></i>
                          </li>
                          <li class="breadcrumb-item active">
@@ -22,7 +22,7 @@
                          </li>
                     </ol>
                </nav>
-               {{> partials/content/nav-type}}
+               {{> partials/content/nav-purchase-type}}
           </div>
      </div>
 </section>
