--- a/src/partials/structure/footer/footer-scripts.html
+++ b/src/partials/structure/footer/footer-scripts.html
@@ -1,2 +1,12 @@
 
 <!-- Footer Scripts -->
+<script type="text/javascript">
+     // Active Page
+     const activePage = window.location.pathname;
+     const navLinks = document.querySelectorAll('a').forEach(link => {
+          if (link.href.includes(`${activePage}`)) {
+               link.classList.add('active');
+               console.log(link);
+          }
+     })
+</script>
