--- a/src/partials/content/buybox-subscription.hbs
+++ b/src/partials/content/buybox-subscription.hbs
@@ -1,4 +1,5 @@
 
+<h6 class="text-primary mb-3">Annual Subscription</h6>
 <figure id="selectFormat" class="bg-light p-4 border rounded-3 mb-0">
      <figcaption class="small mb-3">Please select print or digital.</figcaption>
      <form id="purchaseOptions">
@@ -20,13 +21,6 @@
           </div>
           <div id="formatContent" class="tab-content">
                <div id="print-tab-pane" class="tab-pane fade show active" role="tabpanel" aria-labelledby="print-tab" tabindex="0">
-                    <figcaption class="small mb-3">Select quantity.</figcaption>
-                    <div class="add-to-cart d-flex align-items-center justify-content-between position-relative">
-                         <input class="form-control form-control w-25 me-2" type="text" placeholder="Qty" aria-label="Qty">
-                         <a class="btn btn-secondary btn-accent w-100"><i class="fa-light fa-shopping-cart me-3"></i>Add to Cart</a>
-                    </div>
-               </div>
-               <div id="digital-tab-pane" class="tab-pane fade" role="tabpanel" aria-labelledby="digital-tab" tabindex="0">
                     <figcaption class="small mb-3">Please select your country.</figcaption>
                     <div class="country-selector d-flex align-items-center justify-content-between px-3 mb-3" role="tablist" aria-label="Tab Toggle">
                          <div class="form-check form-check-inline">
@@ -42,6 +36,11 @@
                               <label class="form-check-label" for="countryIntnl">Intnl</label>
                          </div>
                     </div>
+                    <div class="add-to-cart d-flex align-items-center justify-content-between position-relative">
+                         <a class="btn btn-secondary btn-accent w-100"><i class="fa-light fa-shopping-cart me-3"></i>Add to Cart</a>
+                    </div>
+               </div>
+               <div id="digital-tab-pane" class="tab-pane fade" role="tabpanel" aria-labelledby="digital-tab" tabindex="0">
                     <div class="add-to-cart d-flex align-items-center justify-content-between position-relative">
                          <a class="btn btn-secondary btn-accent w-100"><i class="fa-light fa-shopping-cart me-3"></i>Add to Cart</a>
                     </div>
