--- a/src/partials/structure/breadcrumb.hbs
+++ b/src/partials/structure/breadcrumb.hbs
@@ -10,11 +10,11 @@
                               <i class="fa-light fa-caret-right text-primary text-opacity-50 fa-caret-right"></i>
                          </li>
                          <li class="breadcrumb-item active">
-                              <a href="#" class="text-decoration-none link-primary opacity-50">Magazines & eBooks</a>
+                              <a class="text-decoration-none link-primary opacity-50">Magazines & eBooks</a>
                               <i class="fa-light fa-caret-right text-primary text-opacity-50 fa-caret-right"></i>
                          </li>
                          <li class="breadcrumb-item active">
-                              <a href="#" class="text-decoration-none link-primary opacity-50">Magazines Magazine Issues</a>
+                              <a class="text-decoration-none link-primary opacity-50">Magazines Magazine Issues</a>
                               <i class="fa-light fa-caret-right text-primary text-opacity-50 fa-caret-right"></i>
                          </li>
                          <li class="breadcrumb-item active" aria-current="page">
