--- a/src/partials/content/nav-purchase-type.hbs
+++ b/src/partials/content/nav-purchase-type.hbs
@@ -1,12 +1,12 @@
 
-<div id="subscriptionType" class="navlink col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-lg-0 d-flex align-items-center justify-content-between mt-3 mt-lg-0">
-     <a href="index.html" class="w-100 btn btn-outline-primary border rounded-3 me-2 d-flex align-items-center justify-content-between" type="button">
+<div id="subscriptionType" class="nav-link col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-lg-0 d-flex align-items-center justify-content-between mt-3 mt-lg-0">
+     <a href="index.html" class="w-100 btn btn-outline-primary text-bg-white border rounded-3 d-flex align-items-center justify-content-between me-3" type="button">
           <h6 class="my-0 text-center">Subscription</h6>
           <div class="checkbox bg-white border rounded-2">
                {{> partials/components/checkbox}}
           </div>
      </a>
-     <a href="single-issue.html" class="w-100 me-2 btn btn-outline-primary text-bg-white border rounded-3 d-flex align-items-center justify-content-between" type="button">
+     <a href="single-issue.html" class="w-100 btn btn-outline-primary text-bg-white border rounded-3 d-flex align-items-center justify-content-between" type="button">
           <h6 class="my-0 text-center">Single <span class="d-none d-xl-inline">Issue</span></h6>
           <div class="checkbox bg-white border rounded-2">
                {{> partials/components/checkbox}}
