--- a/src/partials/structure/open.hbs
+++ b/src/partials/structure/open.hbs
@@ -15,4 +15,4 @@
      {{> partials/structure/breadcrumb}}
 
      <!-- Body Content Start -->
-     <main id="commerceWrapper" class="container-md">
+     <main id="commerceWrapper" class="container-xl">
