--- a/src/partials/components/checkbox.hbs
+++ b/src/partials/components/checkbox.hbs
@@ -1,5 +1,5 @@
 
-<svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+<svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" style="width: 20px; max-width: 100%; height: auto;">
      <defs><style>.b {fill: none;}.c {fill: var(--bs-primary);}</style></defs>
      <rect class="b" width="30" height="30" />
      <path class="c" d="M30,.74c-.03-.07-.15-.04-.76,.11-.96,.23-2.41,.85-3.8,1.83-2.27,1.59-6.33,5-9.89,10.12-3.56,5.12-4.34,6.38-4.34,6.38-.04,.07-.11,.08-.15,0,0,0-1.91-3.15-2.95-4.24-1.03-1.09-1.92-2.3-3.48-2.04-1.56,.25-3.57,1.53-4.36,2.17-.46,.37-.2,.78-.2,.78,4.29,4.61,6.09,8.95,7.16,11.75,.24,.63,.48,1.31,.72,1.54,.24,.23,.72,.17,1.07,.08,.46-.11,1.07-.35,1.88-.8,2.77-1.53,2.6-2.15,3.8-4.58,.99-1.99,3.33-7.22,6.15-11.66,2.54-3.99,6.42-8.87,8.68-10.94,.25-.23,.49-.43,.46-.5Z" />
