Major Update (related products and reviews)

--- a/src/partials/components/star-rating-single-review.hbs
+++ b/src/partials/components/star-rating-single-review.hbs
@@ -1,5 +1,5 @@
 
-<div class="star-rating bg-white d-flex align-items-center justify-content-start ">
+<div class="star-rating bg-white d-flex align-items-center justify-content-start mb-3">
      <div class="text-warning pe-3">
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp"></i>
@@ -7,8 +7,4 @@
           <i class="fa-duotone fa-star-sharp-half"></i>
           <i class="fa-solid fa-star-sharp opacity-25"></i>
      </div>
-     <span class="d-flex flex-column align-items-end">
-          <p class="tiny text-gray m-0">3.5 Stars Based on</p>
-          <a href="" title="Read Reviews" class="small">43 Reviews</a>
-     </span>
 </div>
