--- a/src/partials/content/product-reviews.hbs
+++ b/src/partials/content/product-reviews.hbs
@@ -1,6 +1,8 @@
 
 <figure id="productReviews" class="p-3 pt-4 my-3 my-lg-4 rounded-3 border border-dark border-opacity-10 position-relative bg-light">
-     {{> partials/components/star-rating}}
+     <div class="bg-white rounded-3 py-2 px-3 shadow-lg small border position-absolute top-0 end-0 translate-start mt-n4 me-4">
+          {{> partials/components/star-rating}}
+     </div>
      <figcaption class="fw-light small mt-2">What people are saying...</figcaption>
      <div id="reviewBox" class="p-3 pb-2">
           <div id="reviewHeadlineCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
