--- a/src/partials/structure/footer.html
+++ b/src/partials/structure/footer.html
@@ -1,3 +1,4 @@
 <!-- Footer -->
-<footer>
+<footer id="siteHeader" class="bg-primary p-5">
+     <h4 class="text-white opacity-50 text-center m-0">Footer in production</h1>
 </footer>
