--- a/src/partials/structure/open.hbs
+++ b/src/partials/structure/open.hbs
@@ -9,10 +9,14 @@
      <script type="module" src="{{webRoot}}/js/main.js"></script>
      <!-- Font Awesome -->
      <script src="https://kit.fontawesome.com/e30d92bf89.js" crossorigin="anonymous"></script>
+     <!-- Owl Carousel -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     
 </head>
 <body>
      {{> partials/structure/header }}
      {{> partials/structure/breadcrumb}}
 
      <!-- Body Content Start -->
-     <main id="commerceWrapper" class="container-xl">
+     <main id="commerceWrapper">
