--- a/src/partials/content/buybox-single-issue.hbs
+++ b/src/partials/content/buybox-single-issue.hbs
@@ -1,6 +1,7 @@
 
 <h6 class="text-primary mb-3">Single Issue</h6>
-<figure id="selectFormat" class="bg-light p-4 border rounded-3 mb-0">
+<figure id="selectFormat" class="bg-light p-3 p-xl-4 border rounded-3 mb-0">
+     {{> partials/content/nav-purchase-type}}
      <figcaption class="small mb-3">Please select print or digital.</figcaption>
      <form id="purchaseOptions">
           <div id="formatSelector" class="mb-3 d-flex align-items-center justify-content-center" role="tablist" aria-label="Tab Toggle">
