--- a/src/partials/structure/footer/footer-scripts.html
+++ b/src/partials/structure/footer/footer-scripts.html
@@ -1,5 +1,61 @@
 
 <!-- Footer Scripts -->
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+     window.addEventListener('load', function(event) {
+          // Related Product Slider
+          $('.related-product-carousel').owlCarousel({
+               autoplay: true,
+               loop: true,
+               nav: true,
+               margin: 30,
+               navText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"],
+               dots: false,
+               responsive: {
+                    0: {
+                         items: 1,
+                         nav: true
+                    },
+                    576: {
+                         items: 2,
+                         nav: true
+                    },
+                    768: {
+                         items: 3,
+                         nav: true
+                    },
+                    992: {
+                         items: 4,
+                         nav: true
+                    }
+               }
+          });
+          // Magazine Reviews Slider
+          $('.magazine-reviews-carousel').owlCarousel({
+               autoplay: true,
+               loop: true,
+               nav: true,
+               margin: 30,
+               navText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"],
+               dots: false,
+               responsive: {
+                    0: {
+                         items: 1,
+                         nav: true
+                    },
+                    576: {
+                         items: 2,
+                         nav: true
+                    },
+                    768: {
+                         items: 3
+                    }
+               }
+          });
+     });
+</script>
 <script type="text/javascript">
      // Active Page
      const activePage = window.location.pathname;
