--- a/src/partials/components/star-rating.hbs
+++ b/src/partials/components/star-rating.hbs
@@ -1,14 +1,15 @@
 
-<div class="star-rating bg-white d-flex align-items-center justify-content-start ">
-     <div class="text-warning pe-3">
+<div class="star-rating bg-white d-flex align-items-center justify-content-start mt-3">
+     <div class="d-flex small text-warning pe-3">
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-duotone fa-star-sharp-half"></i>
           <i class="fa-solid fa-star-sharp opacity-25"></i>
      </div>
-     <span class="d-flex flex-column align-items-end">
-          <p class="tiny text-gray m-0">3.5 Stars Based on</p>
+     <ul class="d-inline-flex align-items-end m-0">
           <a href="" title="Read Reviews" class="small">43 Reviews</a>
+          <span class="ps-2 pe-2 text-muted">|</span>
+          <a href="" title="Read Reviews" class="small">Write a Review</a>
      </span>
 </div>
