--- a/src/partials/content/product-images.hbs
+++ b/src/partials/content/product-images.hbs
@@ -1,11 +1,7 @@
 
 <div class="position-relative mb-4">
-     <div class="d-flex flex-column position-absolute translate-middle end-0 top-0 mt-5 me-4">
-          <a href="{{webRoot}}/images/QQE_20221101-scaled.jpg.optimal.jpg" title="Expand Image" data-toggle="lightbox" data-type="image" data-caption="Magazine Cover"><i class="fa-light fa-magnifying-glass-plus"></i></a>
-          <div class="add-to-favs mt-3">
-               <input type="checkbox" class="btn-check" id="btn-fav" checked autocomplete="off">
-               <label class="active fa-light fa-heart text-primary" for="btn-fav"></label>
-          </div>
+     {{!-- <div class="d-flex flex-column position-absolute translate-end end-0 top-0 me-4">
+          <a href="{{webRoot}}/images/QQE_20221101-scaled.jpg.optimal.jpg" title="Expand Image" data-toggle="lightbox" data-type="image" data-caption="Magazine Cover"><i class="fa-light fa-magnifying-glass-plus text-white"></i></a>
      </div>
-     <img id="magCover" class="img-fluid d-block m-auto" src="{{webRoot}}/images/QQE_20221101.jpg" alt="Magzine" />
+     <img id="magCover" class="img-fluid d-block m-auto" src="{{webRoot}}/images/QQE_20221101.jpg" alt="Magzine" /> --}}
 </div>
