--- a/src/partials/content/product-info.hbs
+++ b/src/partials/content/product-info.hbs
@@ -1,5 +1,5 @@
 
-<div id="productInfo" class="p-2 border rounded-3">
+<div id="productInfo">
      <ul id="infoTabs" class="nav nav-tabs" role="tablist">
           <li class="nav-item" role="presentation">
                <a class="nav-link active" id="about-tab" data-bs-toggle="tab" data-bs-target="#about-tab-pane" type="button" role="tab" aria-controls="about-tab-pane" aria-selected="true">
@@ -12,7 +12,7 @@
                </a>
           </li>
      </ul>
-     <div id="infoTabsContent" class="tab-content p-3 pt-2">
+     <div id="infoTabsContent" class="tab-content p-3 pt-2 border border-top-0 bg-light rounded-bottom">
           <div class="tab-pane fade show active" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
                <p class="m-0">Get ready for a cozy autumn season with this issue of Quick + Easy Quilts! You’ll find a cornucopia of fun fall-themed projects—including quilts with spooky black cats, plump pumpkins, and wild webs of color. If you’re ready to explore die-cutting, we also have a great article and patterns to help you get started. Always included: Quilt of Valor®, baby quilts, color options, and quilts that can be made in a weekend!</p>
           </div>
