--- a/src/partials/content/related-products.hbs
+++ b/src/partials/content/related-products.hbs
@@ -1,66 +1,50 @@
 
-<section id="relatedProducts" class="bg-light pb-3">
+<section id="relatedProducts">
      <div class="container-xl">
           <div class="row">
-               <div class="col-12 py-4">
+               <div class="col-12 pb-3">
                     <h5 class="mt-3">Frequently Bought Together</h5>
                </div>
                <div class="col">
                     <div class="related-product-carousel owl-carousel owl-theme">
 
-                         <figure class="related-product card p-3 border border-medium">
-                              <div id="price" class="position-absolute end-0 me-3 mt-4">
-                                   <h5 class="text-primary position-relative">
-                                        <sup>$</span>9.99
-                                   </h5>
+                         <figure class="related-product card p-0 border-0">
+                              <div class="price">
                               </div>
-                              <img src="/images/MQ2210_COVER.jpg" alt="McCall's Quilting" class="fluid p-3" />
+                              <img src="/images/MQ2210_COVER.jpg" alt="McCall's Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">McCall's Quilting</h6>
-                                   <p class="card-text small">Get dimensional with the September/October 2022 issue of McCall's Quilting!</p>
-                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now</a>
+                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now <span class="text-muted ms-2 me-2">|</span> <sup>$</sup>9.99</a>
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-3 border border-medium">
-                              <div id="price" class="position-absolute end-0 me-3 mt-4">
-                                   <h5 class="text-primary position-relative">
-                                        <sup>$</span>9.99
-                                   </h5>
+                         <figure class="related-product card p-0 border-0">
+                              <div class="price">
                               </div>
-                              <img src="/images/LOQ_20221001.jpg" alt="Love of Quilting" class="fluid p-3" />
+                              <img src="/images/LOQ_20221001.jpg" alt="Love of Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Love of Quilting</h6>
-                                   <p class="card-text small">Make your house feel like home with this print edition of Love of Quilting September/October 2022.</p>
-                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now</a>
+                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now <span class="text-muted ms-2 me-2">|</span> <sup>$</sup>9.99</a>
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-3 border border-medium">
-                              <div id="price" class="position-absolute end-0 me-3 mt-4">
-                                   <h5 class="text-primary position-relative">
-                                        <sup>$</span>9.99
-                                   </h5>
+                         <figure class="related-product card p-0 border-0">
+                              <div class="price">
                               </div>
-                              <img src="/images/QM_20221001.jpg" alt="Quiltmaker" class="fluid p-3" />
+                              <img src="/images/QM_20221001.jpg" alt="Quiltmaker" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Quiltmaker</h6>
-                                   <p class="card-text small">Falling leaves, spooky houses, pumpkin patches, and witches galore—it's time for the fall issue of Quiltmaker!</p>
-                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now</a>
+                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now <span class="text-muted ms-2 me-2">|</span> <sup>$</sup>9.99</a>
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-3 border border-medium">
-                              <div id="price" class="position-absolute end-0 me-3 mt-4">
-                                   <h5 class="text-primary position-relative">
-                                        <sup>$</span>9.99
-                                   </h5>
+                         <figure class="related-product card p-0 border-0">
+                              <div class="price">
                               </div>
-                              <img src="/images/CSQ_Cover_Front.jpg" alt="Creative Scrap Quilting" class="fluid p-3" />
+                              <img src="/images/CSQ_Cover_Front.jpg" alt="Creative Scrap Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Creative Scrap Quilting</h6>
-                                   <p class="card-text small">Put your fabric scraps to work and use them to make stunning, one-of-a-kind scrap quilts!</p>
-                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now</a>
+                                   <a href="" class="btn btn-primary btn-sm m-0">Buy Now <span class="text-muted ms-2 me-2">|</span> <sup>$</sup>9.99</a>
                               </div>
                          </figure>
 
