--- a/src/partials/content/product-images.hbs
+++ b/src/partials/content/product-images.hbs
@@ -1,7 +1,7 @@
 
 <div class="position-relative mb-4">
-     {{!-- <div class="d-flex flex-column position-absolute translate-end end-0 top-0 me-4">
+     <div class="d-flex flex-column position-absolute translate-end end-0 top-0 me-4">
           <a href="{{webRoot}}/images/QQE_20221101-scaled.jpg.optimal.jpg" title="Expand Image" data-toggle="lightbox" data-type="image" data-caption="Magazine Cover"><i class="fa-light fa-magnifying-glass-plus text-white"></i></a>
      </div>
-     <img id="magCover" class="img-fluid d-block m-auto" src="{{webRoot}}/images/QQE_20221101.jpg" alt="Magzine" /> --}}
+     <img id="magCover" class="img-fluid d-block m-auto" src="{{webRoot}}/images/QQE_20221101.jpg" alt="Magzine" />
 </div>
