--- a/src/partials/content/related-products.hbs
+++ b/src/partials/content/related-products.hbs
@@ -8,9 +8,7 @@
                <div class="col">
                     <div class="related-product-carousel owl-carousel owl-theme">
 
-                         <figure class="related-product card p-0 border-0">
-                              <div class="price">
-                              </div>
+                         <figure class="related-product card p-2 pt-0 border-0">
                               <img src="/images/MQ2210_COVER.jpg" alt="McCall's Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">McCall's Quilting</h6>
@@ -18,9 +16,7 @@
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-0 border-0">
-                              <div class="price">
-                              </div>
+                         <figure class="related-product card p-2 pt-0 border-0">
                               <img src="/images/LOQ_20221001.jpg" alt="Love of Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Love of Quilting</h6>
@@ -28,9 +24,7 @@
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-0 border-0">
-                              <div class="price">
-                              </div>
+                         <figure class="related-product card p-2 pt-0 border-0">
                               <img src="/images/QM_20221001.jpg" alt="Quiltmaker" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Quiltmaker</h6>
@@ -38,9 +32,7 @@
                               </div>
                          </figure>
 
-                         <figure class="related-product card p-0 border-0">
-                              <div class="price">
-                              </div>
+                         <figure class="related-product card p-2 pt-0 border-0">
                               <img src="/images/CSQ_Cover_Front.jpg" alt="Creative Scrap Quilting" class="img-fluid" />
                               <div class="card-body p-0 pt-3">
                                    <h6 class="card-title text-primary">Creative Scrap Quilting</h6>
