--- a/src/partials/components/star-rating-single-review.hbs
+++ b/src/partials/components/star-rating-single-review.hbs
@@ -4,7 +4,7 @@
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp"></i>
-          <i class="fa-duotone fa-star-sharp-half"></i>
+          <i class="fa-solid fa-star-sharp"></i>
           <i class="fa-solid fa-star-sharp opacity-25"></i>
      </div>
 </div>
