--- a/src/partials/content/magazine-reviews.hbs
+++ b/src/partials/content/magazine-reviews.hbs
@@ -1,32 +1,172 @@
 
-<section id="magazineReviews" class="bg-white pb-4">
+<section id="magazineReviews" class="bg-white pb-4 small">
      <div class="container-xl">
           <div class="row">
                <div class="col-12 py-4">
                     <h5 class="mt-3">Reviews from Readers</h5>
                </div>
-               <div class="col">
-                    <div class="magazine-reviews-carousel owl-carousel owl-theme">
+               <div class="col-md-6 col-lg-5 col-xl-4">
+                    <div class="card d-flex flex-column align-items-center p-4">
+                         <div class="card-body d-flex align-items-center justify-content-center py-0">
+                              <p class="fs-1 fw-bold text-primary me-2">4.0</p>
+                              <span class="text-muted">out of 5</span>
+                         </div>
+                         {{> partials/components/star-rating-single-review}}
 
-                         <figure class="magazine-review card border-0">
-                              <div class="card-body">
-                                   {{> partials/components/star-rating-single-review}}
-                                   <h6 class="card-title text-primary">Firstname L.</h6>
-                                   <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
-                                   <p class="card-text small">"I've learned so much from this magazine!"</p>
-                              </div>
-                         </figure>
+                         <div class="text-center mt-n2 mb-2">434 Ratings</div>
 
-                         <figure class="magazine-review card border-0">
-                              <div class="card-body">
-                                   {{> partials/components/star-rating-single-review}}
-                                   <h6 class="card-title text-primary">Firstname L.</h6>
-                                   <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
-                                   <p class="card-text small">"Insightful, informative, and a pleasure to read!"</p>
+                         <a href="" class="btn btn-sm btn-primary mb-4" title="Write A Review">Write A Review</a>
+
+                         <div class="d-flex align-items-center justify-content-between w-100 mb-2">
+                              <span class="text-left">5 Stars</span>
+                              <div class="progress w-75">
+                                   <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 58%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
-                         </figure>
+                              <span>254</span>
+                         </div>
+
+                         <div class="d-flex align-items-center justify-content-between w-100 mb-2">
+                              <span class="text-left">4 Stars</span>
+                              <div class="progress w-75">
+                                   <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 12%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                              <span>56</span>
+                         </div>
+
+                         <div class="d-flex align-items-center justify-content-between w-100 mb-2">
+                              <span class="text-left">3 Stars</span>
+                              <div class="progress w-75">
+                                   <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                              <span>44</span>
+                         </div>
+
+                         <div class="d-flex align-items-center justify-content-between w-100 mb-2">
+                              <span class="text-left">2 Stars</span>
+                              <div class="progress w-75">
+                                   <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 6.9%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                              <span>30</span>
+                         </div>
+
+                         <div class="d-flex align-items-center justify-content-between w-100 small mb-2">
+                              <span class="text-left">1 Stars</span>
+                              <div class="progress w-75">
+                                   <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 11.5%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                              <span>50</span>
+                         </div>
 
                     </div>
+               </div>
+               <div class="col">
+                    <div class="row d-flex aling-items-center justify-content-between">
+                         <p class="mt-4 mt-lg-0">4 Reviews</p>
+                    </div>
+                    <figure class="magazine-review card">
+                         <div class="card-body d-flex flex-column flex-sm-row flex-md-column flex-lg-row justify-content-between">
+                              <div class="col-12 col-sm-4 col-md-12 col-lg-5 col-xl-4">
+                                   <p class="fw-bold"><i class="fa-solid fa-badge-check text-primary me-2"></i>Verified Purchase</p>
+                                   <div class="d-flex align-items-center justify-content-start">
+                                        <span class="pe-2">Was this helpful?</span>
+                                        <span class="me-1">
+                                             <i class="fa-solid fa-thumbs-up text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                        <span>
+                                             <i class="fa-solid fa-thumbs-down text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-8 col-md-12 col-lg-7 col-xl-8 p-4 d-flex align-items-center justyfy-content-center">
+                                   <div class="w-100">
+                                        {{> partials/components/star-rating-single-review}}
+                                        <h6 class="card-title text-primary">Firstname L.</h6>
+                                        <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
+                                        <p class="card-text small">"I've learned so much from this magazine!"</p>
+                                   </div>
+                              </div>
+                         </div>
+                    </figure>
+                    <figure class="magazine-review card">
+                         <div class="card-body d-flex flex-column flex-sm-row flex-md-column flex-lg-row justify-content-between">
+                              <div class="col-12 col-sm-4 col-md-12 col-lg-5 col-xl-4">
+                                   <p class="fw-bold"><i class="fa-solid fa-badge-check text-primary me-2"></i>Verified Purchase</p>
+                                   <div class="d-flex align-items-center justify-content-start">
+                                        <span class="pe-2">Was this helpful?</span>
+                                        <span class="me-1">
+                                             <i class="fa-solid fa-thumbs-up text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                        <span>
+                                             <i class="fa-solid fa-thumbs-down text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-8 col-md-12 col-lg-7 col-xl-8 p-4 d-flex align-items-center justyfy-content-center">
+                                   <div class="w-100">
+                                        {{> partials/components/star-rating-single-review}}
+                                        <h6 class="card-title text-primary">Firstname L.</h6>
+                                        <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
+                                        <p class="card-text small">"I've learned so much from this magazine!"</p>
+                                   </div>
+                              </div>
+                         </div>
+                    </figure>
+                    <figure class="magazine-review card">
+                         <div class="card-body d-flex flex-column flex-sm-row flex-md-column flex-lg-row justify-content-between">
+                              <div class="col-12 col-sm-4 col-md-12 col-lg-5 col-xl-4">
+                                   <p class="fw-bold"><i class="fa-solid fa-badge-check text-primary me-2"></i>Verified Purchase</p>
+                                   <div class="d-flex align-items-center justify-content-start">
+                                        <span class="pe-2">Was this helpful?</span>
+                                        <span class="me-1">
+                                             <i class="fa-solid fa-thumbs-up text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                        <span>
+                                             <i class="fa-solid fa-thumbs-down text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-8 col-md-12 col-lg-7 col-xl-8 p-4 d-flex align-items-center justyfy-content-center">
+                                   <div class="w-100">
+                                        {{> partials/components/star-rating-single-review}}
+                                        <h6 class="card-title text-primary">Firstname L.</h6>
+                                        <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
+                                        <p class="card-text small">"I've learned so much from this magazine!"</p>
+                                   </div>
+                              </div>
+                         </div>
+                    </figure>
+                    <figure class="magazine-review card">
+                         <div class="card-body d-flex flex-column flex-sm-row flex-md-column flex-lg-row justify-content-between">
+                              <div class="col-12 col-sm-4 col-md-12 col-lg-5 col-xl-4">
+                                   <p class="fw-bold"><i class="fa-solid fa-badge-check text-primary me-2"></i>Verified Purchase</p>
+                                   <div class="d-flex align-items-center justify-content-start">
+                                        <span class="pe-2">Was this helpful?</span>
+                                        <span class="me-1">
+                                             <i class="fa-solid fa-thumbs-up text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                        <span>
+                                             <i class="fa-solid fa-thumbs-down text-primary ms-2"></i>
+                                             <span class="count small fw-bold">0</span>
+                                        </span>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-8 col-md-12 col-lg-7 col-xl-8 p-4 d-flex align-items-center justyfy-content-center">
+                                   <div class="w-100">
+                                        {{> partials/components/star-rating-single-review}}
+                                        <h6 class="card-title text-primary">Firstname L.</h6>
+                                        <h6 class="card-subtitle mb-2 text-muted small">City, ST</h6>
+                                        <p class="card-text small">"I've learned so much from this magazine!"</p>
+                                   </div>
+                              </div>
+                         </div>
+                    </figure>
                </div>
           </div>
      </div>
